[project]
name = "kbase1-mcp-service"
version = "0.1.0"
description = "collec query conetent convert to yifangyun kbase"
authors = [
    { name = "wangjiaxing", email = "1196510942@qq.com" }
]
dependencies = [
    "mcp",
    "fastmcp"
]

[project.scripts]
kbase1-mcp-server = "yfy_mcp_server.mcp_server:main"